# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

include_directories(${CMAKE_SOURCE_DIR}/src/invariant/)
include_directories(${CMAKE_SOURCE_DIR}/src/tools/)

 add_subdirectory(graph)
