# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

include_directories(${CMAKE_SOURCE_DIR}/src/invariant/smartSubPaving)
include_directories(${CMAKE_SOURCE_DIR}/src/invariant/maze)
include_directories(${CMAKE_SOURCE_DIR}/src/tools/)

 add_subdirectory(graph)
