# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================


add_subdirectory(invariants)
#add_subdirectory(graphics)
#add_subdirectory(integration)
#add_subdirectory(kernel)
add_subdirectory(netcdf)
#add_subdirectory(basin)
#add_subdirectory(trajectories)
add_subdirectory(ppl)
