# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_van_der_pol_basin)
add_subdirectory(02_ratschan_basin)
add_subdirectory(03_genesio_basin)
add_subdirectory(04_bacha_basin)