# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_van_der_pol_basin)
add_subdirectory(02_ratschan_basin)
add_subdirectory(03_genesio_basin)
add_subdirectory(04_bacha_basin)
add_subdirectory(05_rayleigh_basin)
add_subdirectory(06_zang_basin)
add_subdirectory(07_van_der_pol2_basin)
add_subdirectory(08_zheng_basin)
