# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================

add_subdirectory(01_van_der_pol_basin)
add_subdirectory(02_ratschan_basin)
add_subdirectory(03_genesio_basin)
add_subdirectory(04_bacha_basin)
add_subdirectory(05_rayleigh_basin)
add_subdirectory(06_zang_basin)
add_subdirectory(07_van_der_pol2_basin)
add_subdirectory(08_auguste_basin)
add_subdirectory(09_auv_basin)
add_subdirectory(10_zheng_basin)
add_subdirectory(11_van_der_pol_stay_bassin)
add_subdirectory(12_zang_stay_bassin)