# ==================================================================
#  invariant-lib - cmake configuration file
# ==================================================================


add_subdirectory(01_van_der_pol_invariant)
add_subdirectory(02_van_der_pol_positive_invariant)
add_subdirectory(03_van_der_pol_invariant_inner)
add_subdirectory(04_van_der_pol_invariant_cycle)
add_subdirectory(05_lorenz_invariant)
